# era5-analysis

./: .gitignore  NOTES.md  README.md  pyproject.toml
config/: data.yaml
notebooks/: 01_fetch_era5.ipynb  02_merge_data.ipynb  03_eda.ipynb  04_labelling.ipynb
src/constants/: __init__.py
src/era5_analysis/: __init__.py  download.py
src/ranges/: __init__.py
src/scripts/: __init__.py  download.py  merge.py
