[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "era5-analysis"
version = "0.1.0"
description = "A project to analyze ERA5 data for insights focused around climate extremes."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cds-weather-api",
    "dask>=2026.3.0",
    "folium>=0.20.0",
    "h5netcdf>=1.8.1",
    "ipykernel>=7.2.0",
    "netcdf4>=1.7.4",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pyyaml>=6.0.3",
    "xarray[accel,io]>=2026.2.0",
]

[tool.uv.sources]
cds-weather-api = { git = "https://github.com/SurfyPenguin/cds-weather-api" }
